--- a/lib.css
+++ b/lib.css
@@ -1,4 +1,57 @@
 body {
-  --bg: #000000;
-  background: var(--bg);
+  min-height: 100vh;
+  background: #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  perspective: var(--perspective); /* change the persective */
+}
+/*cuboid*/
+.c {
+  --width: 30vmin; /* change width */
+  --height: 20vmin; /* change height */
+  --depth: 20vmin; /* change depth */
+  width: var(--width);
+  height: var(--height);
+  position: relative;
+  transform-style: preserve-3d;
+  /* add the below line in your code to rotate the cuboid*/
+  /*transform: rotateX(24deg) rotateY(32deg);*/ 
+}
+.s {
+  background: rgba(0,0,255,0.2);
+  position: absolute;
+  border: 1px #cccccc solid;
+}
+.s:nth-child(1), .s:nth-child(2) {
+  --co: -0.5;
+  height: var(--height);
+  width: var(--width);
+  transform: translate3d(0 , 0, calc(var(--depth) * var(--co)));
+}
+.s:nth-child(2) {
+  --co: 0.5;
+}
+.s:nth-child(3), .s:nth-child(4) {
+  --rt: 90deg;
+  height: var(--height);
+  width: var(--depth);
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) rotateY(var(--rt)) translate3d(0,0, calc(var(--width) * -0.5));
+}
+.s:nth-child(4) {
+  --rt: -90deg;
+}
+.s:nth-child(5), .s:nth-child(6) {
+  --rt: -90deg;
+  height: var(--depth);
+  width: var(--width);
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) rotateX(var(--rt)) translate3d( 0 , 0, calc(var(--height) * -0.5) );
+}
+.s:nth-child(6) {
+  --rt: 90deg;
 }
